# protocol

./: Cargo.toml  aliases.js  search-index.js  settings.html  source-files.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/protocol/format/: trait.Format.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
protocol/: all.html  enum.Bottom.html  enum.ContextError.html  index.html  sidebar-items.js  trait.Channel.html  trait.Channels.html  trait.Dispatch.html  trait.Join.html  trait.Pass.html  trait.Protocol.html  trait.Spawn.html
protocol/director/: enum.DirectorError.html  index.html  sidebar-items.js  struct.Null.html  struct.Trivial.html  trait.Director.html
protocol/director/null/: struct.Null.html
protocol/director/trivial/: struct.Trivial.html
protocol/format/: index.html  sidebar-items.js  struct.Null.html  trait.ByteFormat.html  trait.Format.html  trait.ItemFormat.html
src/: format.rs  lib.rs  option.rs  unit.rs
src/director/: mod.rs  null.rs  trivial.rs
src/protocol/: format.rs.html  lib.rs.html  option.rs.html  unit.rs.html
src/protocol/director/: mod.rs.html  null.rs.html  trivial.rs.html
